# claude-code-termux

./: .gitignore  CHECKSUMS.txt  CHECKSUMS.txt.asc  README.md  TROUBLESHOOTING.md  claude-wrapper.sh  claude-wrapper.sh.asc  install-secure.sh  install-secure.sh.asc  install-simple.sh  install-simple.sh.asc  install.sh  install.sh.asc  lunch.sh  uninstall.sh  uninstall.sh.asc
.github/workflows/: build.yml
docs/: index.html
npm-package/package/: README.md  cli-wrapper.cjs  install.cjs  package.json
rust-wrapper/: .gitignore  BUILD.md  Cargo.toml
rust-wrapper/src/: main.rs
